--- a/index.html
+++ b/index.html
@@ -4,59 +4,142 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home paage</title>
-    <link rel="stylesheet" href="./vendors/OwlCarousel2-2.3.4/owl.carousel.min.css">
-    <link rel="stylesheet" href="./vendors/OwlCarousel2-2.3.4/owl.theme.default.min.css">
+    <title>Home Page</title>
     <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Disabled</a>
-                        </li>
-                    </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                </div>
-            </nav>
+    <section>
+        <div class="container-fluid bg-gray pb-15">
+            <div class="site-logo font-weight-bold text-center pt-5">
+                <h1>LOGO</h1>
+            </div>
+            <h2 class="pt-10">H2 Heading here
+                drops and breaks here</h2>
+            <p class="pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="site-button py-2">
+                <button type="button" class="btn btn-dark">CLICK HERE</button>
+            </div>
         </div>
-    </header>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 py-2">
+                    <h1 class="font-weight-bold">H1 Title</h1>
+                    <p>“A bit of background on the products featured underneath - use ”</p>
+                </div>
+                <div class="col-12 col-md-6 py-2">
+                    <img src="./images/flower1.jfif" class="d-block d-md-none">
+                    <img src="./images/img1.jpg" class="d-none d-md-block">
+                </div>
+                <div class="col-12 col-md-6 py-2">
+                    <p class="pl-md-8">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus placeat aspernatur dicta? Laudantium adipisci optio deserunt quisquam 
+                        consequatur totam quos consectetur repellat doloremque natus blanditiis, magnam cum a recusandae excepturi?</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 py-2">
+                    <p class="text-black font-weight-bold">See What Our Clients Have To Say</p>
+                </div>
+                <div class="col-12 col-md-4 py-3">
+                    <div class="card border-0">
+                        <img class="card-img-top rounded-circle py-2 px-1" src="./images/flower1.jfif" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title font-weight-bold">First Name Last Name</h5>
+                          <p class="card-text">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+                          <a href="#" class="btn btn-primary">Read full review</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-md-4 py-3">
+                    <div class="card border-0">
+                        <img class="card-img-top rounded-circle py-2 px-1" src="./images/flower1.jfif" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title font-weight-bold">First Name Last Name</h5>
+                          <p class="card-text">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+                          <a href="#" class="btn btn-primary">Read full review</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-12 col-md-4 py-3">
+                    <div class="card border-0">
+                        <img class="card-img-top rounded-circle py-2 px-2" src="./images/flower1.jfif" alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title font-weight-bold">First Name Last Name</h5>
+                          <p class="card-text">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+                          <a href="#" class="btn btn-primary">Read full review</a>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <footer class="footer-section bg-gray">
+            <div class="container">
+                <div class="footer-cta pt-5 pb-5 text-center text-md-left">
+                    <div class="row">
+                       <div class="col-12">
+                           <h3>MENU SUBHEADING</h3>
+                        <ul class="list-group">
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
+                          </ul>
+                       </div>
+                       <div class="col-12">
+                        <h3>MENU SUBHEADING 2</h3>
+                     <ul class="list-group">
+                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
+                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
+                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
+                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
+                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
+                       </ul>
+                    </div>
+                    </div>
+                </div>
+                <div class="footer-content">
+                    <div class="row">
+                        <div class="col-xl-4 col-lg-4 mb-50">
+                        </div>
+                        <div class="col-12 mb-50">
+                            <div class="footer-widget">
+                                <div class="subscribe-form pb-4">
+                                    <form action="#">
+                                        <input type="text" placeholder="Email Address">
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright-area">
+                    <div class="row">
+                        <div class="col-12 col-md-3">
+                            <p>Privacy Policy</p>
+                        </div>
+                        <div class="col-12 col-md-3">
+                            <p>Cookie Policy</p>
+                        </div>
+                        <div class="col-12 col-md-3">
+                            <p>Return Policy</p>
+                        </div>
+                        <div class="col-12 col-md-3">
+                            <p>Terms & Condition</p>
+                        </div>
+                        <div class="col-12 text-center">
+                            <div class="copyright-text">
+                                <p>Copyright &copy; 2021, All Right Reserved</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
+    </section>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-<script src="./vendors/OwlCarousel2-2.3.4/owl.carousel.min.js"></script>
-<script src="./vendors/popper.js"></script>
-<script src="./js/vendors/bootstrap-4.1.3/bootstrap.min.js"></script>
-<script src="./js/main.js"></script>
+
 </html>
