--- a/index.html
+++ b/index.html
@@ -9,9 +9,49 @@
 </head>
 
 <body>
+    <header class="navbar-light position-fixednavbar-light fixed-top d-flex justify-content-end mr-2 mt-2 pt-md-3">
+
+        <button type="button" class="navbar-toggler" data-toggle="modal" data-target="#exampleModalCenter">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </header>
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">LOGO</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <nav>
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="./">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./product.html">Products</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./category.html">Category</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./blog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
     <section>
-        <div class="container-fluid bg-gray pb-15">
-            <div class="site-logo font-weight-bold text-center pt-5">
+        <div class="container-fluid bg-gray pb-15 pl-md-12">
+            <div class="site-logo font-weight-bold text-center text-md-left pt-md-5 pt-2">
                 <h1>LOGO</h1>
             </div>
             <h2 class="pt-10">H2 Heading here
@@ -24,122 +64,145 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 py-2">
-                    <h1 class="font-weight-bold">H1 Title</h1>
+                    <h1 class="font-weight-bold pt-md-5">H1 Title</h1>
                     <p>“A bit of background on the products featured underneath - use ”</p>
                 </div>
                 <div class="col-12 col-md-6 py-2">
                     <img src="./images/flower1.jfif" class="d-block d-md-none">
                     <img src="./images/img1.jpg" class="d-none d-md-block">
                 </div>
-                <div class="col-12 col-md-6 py-2">
-                    <p class="pl-md-8">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus placeat aspernatur dicta? Laudantium adipisci optio deserunt quisquam 
-                        consequatur totam quos consectetur repellat doloremque natus blanditiis, magnam cum a recusandae excepturi?</p>
+                <div class="col-12 col-md-6 py-2 d-md-none d-lg-block">
+                    <p class="pl-md-8">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus placeat
+                        aspernatur dicta? Laudantium adipisci optio deserunt quisquam
+                        consequatur totam quos consectetur repellat doloremque natus blanditiis, magnam cum a recusandae
+                        excepturi?</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row pb-md-4">
                 <div class="col-12 py-2">
-                    <p class="text-black font-weight-bold">See What Our Clients Have To Say</p>
+                    <p class="text-black font-weight-bold pt-md-5">See What Our Clients Have To Say</p>
                 </div>
                 <div class="col-12 col-md-4 py-3">
                     <div class="card border-0">
-                        <img class="card-img-top rounded-circle py-2 px-1" src="./images/flower1.jfif" alt="Card image cap">
+                        <img class="card-img-top rounded-circle py-2 px-1" src="./images/flower1.jfif"
+                            alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title font-weight-bold">First Name Last Name</h5>
-                          <p class="card-text">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
-                          <a href="#" class="btn btn-primary">Read full review</a>
+                            <h5 class="card-title font-weight-bold">First Name Last Name</h5>
+                            <p class="card-text">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+                            <a href="#" class="btn btn-primary">Read full review</a>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-4 py-3">
                     <div class="card border-0">
-                        <img class="card-img-top rounded-circle py-2 px-1" src="./images/flower1.jfif" alt="Card image cap">
+                        <img class="card-img-top rounded-circle py-2 px-1" src="./images/flower1.jfif"
+                            alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title font-weight-bold">First Name Last Name</h5>
-                          <p class="card-text">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
-                          <a href="#" class="btn btn-primary">Read full review</a>
+                            <h5 class="card-title font-weight-bold">First Name Last Name</h5>
+                            <p class="card-text">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+                            <a href="#" class="btn btn-primary">Read full review</a>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-12 col-md-4 py-3">
                     <div class="card border-0">
-                        <img class="card-img-top rounded-circle py-2 px-2" src="./images/flower1.jfif" alt="Card image cap">
+                        <img class="card-img-top rounded-circle py-2 px-2" src="./images/flower1.jfif"
+                            alt="Card image cap">
                         <div class="card-body">
-                          <h5 class="card-title font-weight-bold">First Name Last Name</h5>
-                          <p class="card-text">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
-                          <a href="#" class="btn btn-primary">Read full review</a>
+                            <h5 class="card-title font-weight-bold">First Name Last Name</h5>
+                            <p class="card-text">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+                            <a href="#" class="btn btn-primary">Read full review</a>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section>
-        <footer class="footer-section bg-gray">
-            <div class="container">
-                <div class="footer-cta pt-5 pb-5 text-center text-md-left">
-                    <div class="row">
-                       <div class="col-12">
-                           <h3>MENU SUBHEADING</h3>
+
+    <footer class="footer-section bg-gray">
+        <div class="container">
+            <div class="footer-cta pt-5 pb-5 text-center text-md-left">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="text-black font-weight-bold">MENU SUBHEADING</h3>
                         <ul class="list-group">
-                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
-                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
-                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
-                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
-                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
-                          </ul>
-                       </div>
-                       <div class="col-12">
-                        <h3>MENU SUBHEADING 2</h3>
-                     <ul class="list-group">
-                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
-                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
-                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
-                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
-                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a></li>
-                       </ul>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                            </li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                            </li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                            </li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                            </li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                            </li>
+                        </ul>
                     </div>
-                    </div>
-                </div>
-                <div class="footer-content">
-                    <div class="row">
-                        <div class="col-xl-4 col-lg-4 mb-50">
-                        </div>
-                        <div class="col-12 mb-50">
-                            <div class="footer-widget">
-                                <div class="subscribe-form pb-4">
-                                    <form action="#">
-                                        <input type="text" placeholder="Email Address">
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-12">
+                        <h3 class="text-black font-weight-bold">MENU SUBHEADING 2</h3>
+                        <ul class="list-group">
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                            </li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                            </li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                            </li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                            </li>
+                            <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
-                <div class="copyright-area">
-                    <div class="row">
-                        <div class="col-12 col-md-3">
-                            <p>Privacy Policy</p>
-                        </div>
-                        <div class="col-12 col-md-3">
-                            <p>Cookie Policy</p>
-                        </div>
-                        <div class="col-12 col-md-3">
-                            <p>Return Policy</p>
-                        </div>
-                        <div class="col-12 col-md-3">
-                            <p>Terms & Condition</p>
-                        </div>
-                        <div class="col-12 text-center">
-                            <div class="copyright-text">
-                                <p>Copyright &copy; 2021, All Right Reserved</p>
+            </div>
+            <div class="footer-content">
+                <div class="row">
+                    <div class="col-12 col-lg-4 mb-50">
+                    </div>
+                    <div class="col-12 mb-50">
+                        <div class="footer-widget">
+                            <div class="subscribe-form pb-4">
+                                <form action="#">
+                                    <input type="text" placeholder="Email Address">
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="copyright-area pl-2">
+                <div class="row">
+                    <div class="col-12 col-md-3">
+                        <p class="text-footer">Privacy Policy</p>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <p class="text-footer">Cookie Policy</p>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <p class="text-footer">Return Policy</p>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <p class="text-footer">Terms & Condition</p>
+                    </div>
+                    <div class="col-12 text-center">
+                        <div class="copyright-text pt-3">
+                            <p>Copyright &copy; 2021, All Right Reserved</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        </footer>
-    </section>
+    </footer>
 </body>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="./js/vendors/popper.js"></script>
+<script src="./vendors/OwlCarousel2-2.3.4/owl.carousel.min.js"></script>
+<script src="./js/vendors/bootstrap-4.1.3/bootstrap.min.js"></script>
+<script src="./js/main.js"></script>
 
 </html>
