--- a/product.html
+++ b/product.html
@@ -11,12 +11,53 @@
 </head>
 
 <body>
-  <section class="py-2">
+  <header class="navbar-light position-fixednavbar-light fixed-top d-flex justify-content-end mr-2 mt-2 pt-md-3">
+
+    <button type="button" class="navbar-toggler" data-toggle="modal" data-target="#exampleModalCenter">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+</header>
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">LOGO</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <nav>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="./">Home</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="./product.html">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./category.html">Category</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./blog.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+
+  <section class="py-md-8 py-5">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <div class="pt-2 pl-3">
-            <h1 class="text-black font-weight-bold">H1 Title which is the product name </h1>
+            <h1 class="text-black font-weight-bold py-5">H1 Title which is the product name </h1>
           </div>
         </div>
       </div>
@@ -28,16 +69,16 @@
                 <div class="item"> <img
                     src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg" alt="image" />
                 </div>
-                <div class="item"> <img
-                    src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204172/banner_2.jpg" alt="image" />
+                <div class="item"> <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204172/banner_2.jpg"
+                    alt="image" />
                 </div>
                 <div class="item"> <img
                     src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204663/park-4174278_640.jpg"
                     alt="image" /> </div>
                 <div class="item"> <img src="http://www.urbanui.com/fily/template/images/carousel/banner_2.jpg"
                     alt="image" /> </div>
-                <div class="item"> <img
-                    src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204172/banner_2.jpg" alt="image" />
+                <div class="item"> <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204172/banner_2.jpg"
+                    alt="image" />
                 </div>
                 <div class="item"> <img
                     src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204663/park-4174278_640.jpg"
@@ -51,24 +92,24 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row p-2 p-md-3 text-center">
         <div class="col-6">
           <div>
             <div class="dropdown">
               <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Offset
+                Quantity
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="#">1</a>
+                <a class="dropdown-item" href="#">2</a>
+                <a class="dropdown-item" href="#">3</a>
               </div>
             </div>
           </div>
         </div>
         <div class="col-6">
-          <button type="button" class="btn btn-info">Info</button>
+          <button type="button" class="btn btn-info">Add to Cart</button>
         </div>
       </div>
 
@@ -81,11 +122,11 @@
           cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-      <div class="py-2 pl-3">
+      <div class="py-3 pl-3">
         <h2 class="font-weight-bold pt-2">Subheading(H2)</h2>
         <p class="font-weight-normal">Text box here for additional category content</p>
       </div>
-      <div class="row">
+      <div class="row py-md-4 py-2">
         <div class="col-12">
           <div class="accordion" id="accordionExample">
             <div class="card">
@@ -141,72 +182,84 @@
     </div>
     </div>
   </section>
-  <section class="py-2">
-    <footer class="footer-section bg-gray">
-      <div class="container">
+  <footer class="footer-section bg-gray">
+    <div class="container">
         <div class="footer-cta pt-5 pb-5 text-center text-md-left">
-          <div class="row">
-            <div class="col-xl-4 col-md-4 mb-30">
-              <div class="single-cta">
-                <i class="fas fa-map-marker-alt"></i>
-                <div class="cta-text">
-                  <h4 class="text-black">Find us</h4>
-                  <span>1010 Avenue, sw 54321</span>
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="text-black font-weight-bold">MENU SUBHEADING</h3>
+                    <ul class="list-group">
+                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                        </li>
+                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                        </li>
+                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                        </li>
+                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                        </li>
+                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                        </li>
+                    </ul>
                 </div>
-              </div>
-            </div>
-            <div class="col-xl-4 col-md-4 mb-30">
-              <div class="single-cta">
-                <i class="fas fa-phone"></i>
-                <div class="cta-text">
-                  <h4 class="text-black">Call us</h4>
-                  <span>9876543210 0</span>
+                <div class="col-12">
+                    <h3 class="text-black font-weight-bold">MENU SUBHEADING 2</h3>
+                    <ul class="list-group">
+                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                        </li>
+                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                        </li>
+                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                        </li>
+                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                        </li>
+                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                        </li>
+                    </ul>
                 </div>
-              </div>
             </div>
-            <div class="col-xl-4 col-md-4 mb-30">
-              <div class="single-cta">
-                <i class="far fa-envelope-open"></i>
-                <div class="cta-text">
-                  <h4 class="text-black">Mail us</h4>
-                  <span>mail@info.com</span>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
         <div class="footer-content">
-          <div class="row">
-            <div class="col-xl-4 col-lg-4 mb-50">
-            </div>
-            <div class="col-12 mb-50">
-              <div class="footer-widget">
-                <div class="subscribe-form pb-4">
-                  <form action="#">
-                    <input type="text" placeholder="Email Address">
-                  </form>
+            <div class="row">
+                <div class="col-12 col-lg-4 mb-50">
                 </div>
-              </div>
+                <div class="col-12 mb-50">
+                    <div class="footer-widget">
+                        <div class="subscribe-form pb-4">
+                            <form action="#">
+                                <input type="text" placeholder="Email Address">
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-      <div class="copyright-area">
-        <div class="row">
-          <div class="col-xl-6 col-lg-6 text-center text-lg-left">
-            <div class="copyright-text">
-              <p>Copyright &copy; 2021, All Right Reserved</p>
+        <div class="copyright-area pl-2">
+            <div class="row">
+                <div class="col-12 col-md-3">
+                    <p class="text-footer">Privacy Policy</p>
+                </div>
+                <div class="col-12 col-md-3">
+                    <p class="text-footer">Cookie Policy</p>
+                </div>
+                <div class="col-12 col-md-3">
+                    <p class="text-footer">Return Policy</p>
+                </div>
+                <div class="col-12 col-md-3">
+                    <p class="text-footer">Terms & Condition</p>
+                </div>
+                <div class="col-12 text-center">
+                    <div class="copyright-text pt-3">
+                        <p>Copyright &copy; 2021, All Right Reserved</p>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
 
-    </footer>
-
-  </section>
+</footer>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+<script src="./js/vendors/jquery.js"></script>
 <script src="./js/vendors/popper.js"></script>
 <script src="./vendors/OwlCarousel2-2.3.4/owl.carousel.min.js"></script>
 <script src="./js/vendors/bootstrap-4.1.3/bootstrap.min.js"></script>
