--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 </head>
 
 <body>
-    <header class="navbar-light position-fixednavbar-light fixed-top d-flex justify-content-end mr-2 mt-2 pt-md-3">
-
+    <header class="navbar-light position-fixed navbar-light fixed-top d-flex justify-content-end mr-2 mt-2 pt-md-3">
         <button type="button" class="navbar-toggler" data-toggle="modal" data-target="#exampleModalCenter">
             <span class="navbar-toggler-icon"></span>
         </button>
     </header>
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -126,7 +124,7 @@
         <div class="container">
             <div class="footer-cta pt-5 pb-5 text-center text-md-left">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 col-md-6">
                         <h3 class="text-black font-weight-bold">MENU SUBHEADING</h3>
                         <ul class="list-group">
                             <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
@@ -141,7 +139,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-6">
                         <h3 class="text-black font-weight-bold">MENU SUBHEADING 2</h3>
                         <ul class="list-group">
                             <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
@@ -176,16 +174,16 @@
             <div class="copyright-area pl-2">
                 <div class="row">
                     <div class="col-12 col-md-3">
-                        <p class="text-footer">Privacy Policy</p>
+                        <p class="text-footer text-center text-md-left">Privacy Policy</p>
                     </div>
                     <div class="col-12 col-md-3">
-                        <p class="text-footer">Cookie Policy</p>
+                        <p class="text-footer text-center text-md-left">Cookie Policy</p>
                     </div>
                     <div class="col-12 col-md-3">
-                        <p class="text-footer">Return Policy</p>
+                        <p class="text-footer text-center text-md-left">Return Policy</p>
                     </div>
                     <div class="col-12 col-md-3">
-                        <p class="text-footer">Terms & Condition</p>
+                        <p class="text-footer text-center text-md-left">Terms & Condition</p>
                     </div>
                     <div class="col-12 text-center">
                         <div class="copyright-text pt-3">
