--- a/product.html
+++ b/product.html
@@ -31,7 +31,7 @@
                 <nav>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="./">Home</a>
+                            <a class="nav-link" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="./product.html">Products</a>
@@ -66,8 +66,7 @@
           <div class="card">
             <div class="card-body">
               <div class="owl-carousel owl-theme">
-                <div class="item"> <img
-                    src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg" alt="image" />
+                <div class="item "> <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204140/banner_12.jpg" alt="image" />
                 </div>
                 <div class="item"> <img src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1557204172/banner_2.jpg"
                     alt="image" />
@@ -185,38 +184,38 @@
   <footer class="footer-section bg-gray">
     <div class="container">
         <div class="footer-cta pt-5 pb-5 text-center text-md-left">
-            <div class="row">
-                <div class="col-12">
-                    <h3 class="text-black font-weight-bold">MENU SUBHEADING</h3>
-                    <ul class="list-group">
-                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
-                        </li>
-                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
-                        </li>
-                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
-                        </li>
-                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
-                        </li>
-                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-12">
-                    <h3 class="text-black font-weight-bold">MENU SUBHEADING 2</h3>
-                    <ul class="list-group">
-                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
-                        </li>
-                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
-                        </li>
-                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
-                        </li>
-                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
-                        </li>
-                        <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
-                        </li>
-                    </ul>
-                </div>
+          <div class="row">
+            <div class="col-12 col-md-6">
+                <h3 class="text-black font-weight-bold">MENU SUBHEADING</h3>
+                <ul class="list-group">
+                    <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                    </li>
+                    <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                    </li>
+                    <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                    </li>
+                    <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                    </li>
+                    <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                    </li>
+                </ul>
             </div>
+            <div class="col-12 col-md-6">
+                <h3 class="text-black font-weight-bold">MENU SUBHEADING 2</h3>
+                <ul class="list-group">
+                    <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                    </li>
+                    <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                    </li>
+                    <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                    </li>
+                    <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                    </li>
+                    <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
         </div>
         <div class="footer-content">
             <div class="row">
@@ -234,26 +233,26 @@
             </div>
         </div>
         <div class="copyright-area pl-2">
-            <div class="row">
-                <div class="col-12 col-md-3">
-                    <p class="text-footer">Privacy Policy</p>
-                </div>
-                <div class="col-12 col-md-3">
-                    <p class="text-footer">Cookie Policy</p>
-                </div>
-                <div class="col-12 col-md-3">
-                    <p class="text-footer">Return Policy</p>
-                </div>
-                <div class="col-12 col-md-3">
-                    <p class="text-footer">Terms & Condition</p>
-                </div>
-                <div class="col-12 text-center">
-                    <div class="copyright-text pt-3">
-                        <p>Copyright &copy; 2021, All Right Reserved</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+          <div class="row">
+              <div class="col-12 col-md-3">
+                  <p class="text-footer text-center text-md-left">Privacy Policy</p>
+              </div>
+              <div class="col-12 col-md-3">
+                  <p class="text-footer text-center text-md-left">Cookie Policy</p>
+              </div>
+              <div class="col-12 col-md-3">
+                  <p class="text-footer text-center text-md-left">Return Policy</p>
+              </div>
+              <div class="col-12 col-md-3">
+                  <p class="text-footer text-center text-md-left">Terms & Condition</p>
+              </div>
+              <div class="col-12 text-center">
+                  <div class="copyright-text pt-3">
+                      <p>Copyright &copy; 2021, All Right Reserved</p>
+                  </div>
+              </div>
+          </div>
+      </div>
     </div>
 
 </footer>
