--- a/blog.html
+++ b/blog.html
@@ -73,7 +73,7 @@
     <div class="container">
         <div class="footer-cta pt-5 pb-5 text-center text-md-left">
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                     <h3 class="text-black font-weight-bold">MENU SUBHEADING</h3>
                     <ul class="list-group">
                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
@@ -88,7 +88,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-md-6">
                     <h3 class="text-black font-weight-bold">MENU SUBHEADING 2</h3>
                     <ul class="list-group">
                         <li class="list-group-item bg-transparent border-0 pl-0 pt-1"><a href="#">SUB LINK</a>
@@ -123,16 +123,16 @@
         <div class="copyright-area pl-2">
             <div class="row">
                 <div class="col-12 col-md-3">
-                    <p class="text-footer">Privacy Policy</p>
+                    <p class="text-footer text-center text-md-left">Privacy Policy</p>
                 </div>
                 <div class="col-12 col-md-3">
-                    <p class="text-footer">Cookie Policy</p>
+                    <p class="text-footer text-center text-md-left">Cookie Policy</p>
                 </div>
                 <div class="col-12 col-md-3">
-                    <p class="text-footer">Return Policy</p>
+                    <p class="text-footer text-center text-md-left">Return Policy</p>
                 </div>
                 <div class="col-12 col-md-3">
-                    <p class="text-footer">Terms & Condition</p>
+                    <p class="text-footer text-center text-md-left">Terms & Condition</p>
                 </div>
                 <div class="col-12 text-center">
                     <div class="copyright-text pt-3">
