--- a/blog.html
+++ b/blog.html
@@ -13,20 +13,19 @@
             <span class="navbar-toggler-icon"></span>
         </button>
     </header>
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-        aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
+    <div class="modal fade pr-0" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog h-100 m-0 ml-auto" role="document">
+            <div class="modal-content h-100 border-0 rounded-0">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">LOGO</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <h5 class="modal-title modal-heading" id="exampleModalCenterTitle">LOGO</h5>
+                    <button type="button" class="close modal-close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
                     <nav>
                         <ul class="navbar-nav">
-                            <li class="nav-item">
+                            <li class="nav-item active">
                                 <a class="nav-link" href="./">Home</a>
                             </li>
                             <li class="nav-item">
@@ -35,7 +34,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./category.html">Category</a>
                             </li>
-                            <li class="nav-item active">
+                            <li class="nav-item">
                                 <a class="nav-link" href="./blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
@@ -123,16 +122,16 @@
         <div class="copyright-area pl-2">
             <div class="row">
                 <div class="col-12 col-md-3">
-                    <p class="text-footer text-center text-md-left">Privacy Policy</p>
+                    <p class="text-center text-md-left"><a class="text-footer " href="#">Privacy Policy</a></p>
                 </div>
                 <div class="col-12 col-md-3">
-                    <p class="text-footer text-center text-md-left">Cookie Policy</p>
+                    <p class="text-center text-md-left"><a class="text-footer" href="#">Cookie Policy</a></p>
                 </div>
                 <div class="col-12 col-md-3">
-                    <p class="text-footer text-center text-md-left">Return Policy</p>
+                    <p class="text-center text-md-left"><a class="text-footer" href="#">Return Policy</a></p>
                 </div>
                 <div class="col-12 col-md-3">
-                    <p class="text-footer text-center text-md-left">Terms & Condition</p>
+                    <p class="text-footer text-center text-md-left"><a class="text-footer" href="#">Terms & Condition</a></p>
                 </div>
                 <div class="col-12 text-center">
                     <div class="copyright-text pt-3">
